--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		  <div class="slide" id="slide1" data-anchor="slide1">
 				<div class="container slideContainer">
 					<p class="travelCompanionLogo travelCompanionLogo2nd">Travel<br>Companion</p>
-					<h2 class="question">How many guests are staying?</h2>
+					<h2 class="slideTitle">How many guests are staying?</h2>
 					<form class="needs-validation" action="#" method="post" novalidate>
 						<select class="form-control form-control-lg dropDownOption">
 						  <option>1</option>
@@ -61,14 +61,13 @@
 							<option>5</option>
 							<option>6</option>
 						</select>
-
 				</div>
 			</div>
 
 		  <div class="slide" id="slide2" data-anchor="slide2">
-				<div class="container slideContainer">
+				<div class="container">
 					<p class="travelCompanionLogo travelCompanionLogo2nd">Travel<br>Companion</p>
-					<h2 class="question">Select your check in and<br>check out dates.</h2>
+					<h2 class="slideTitle">Select your check in and<br>check out dates.</h2>
 
 					<div class="checkInOut">
 						<div class="col-md-4 mb-3 label">
@@ -88,20 +87,33 @@
 						</div>
 					</div>
 
-					<p>You have selected</p>
-					<div class="daysSelected">5 Days</div>
-					<div class="note">A minimum of 1 night is required. The mix is 15 nights. <br> *Required Field</div>
-
+					<p class="optionsFont daySelectedTitle">You have selected</p>
+					<div class="optionsFont daysSelected">5 Days</div>
+					<div class="note"><p>A minimum of 1 night is required. The mix is 15 nights. <br> *Required Field<p></div>
 					</form>
 				</div>
 			</div>
 
 			<div class="slide" id="slide3" data-anchor="slide3">
-				<h1>Slide 3</h1>
+				<div class="container slideContainer">
+					<p class="travelCompanionLogo travelCompanionLogo2nd">Travel<br>Companion</p>
+					<h2 class="slideTitle">Select your meal options</h2>
+					<select class="form-control form-control-lg dropDownOption">
+						<option>Breakfast - $30</option>
+						<option>Lunch - $30</option>
+						<option>Dinner - $30</option>
+						<option>All meals - $90</option>
+					</select>
+				</div>
+
 			</div>
 
 			<div class="slide" id="slide4" data-anchor="slide4">
-				<h1>Slide 4</h1>
+				<p class="travelCompanionLogo travelCompanionLogo2nd">Travel<br>Companion</p>
+				<h2 class="slideTitle">All Set!</h2>
+				<span class="tick"><i class="fas fa-check"></i></span>
+				<p>You can now explore your accommodation options</p>
+				<button type="submit" name="button">Browse Accommodation</button>
 			</div>
 
 		</div> <!-- SECTION1 ENDS -->
