Added styling to slides

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 				<p class="travelCompanionLogo travelCompanionLogo2nd">Travel<br>Companion</p>
 				<h2 class="slideTitle">All Set!</h2>
 				<span class="tick"><i class="fas fa-check"></i></span>
-				<p>You can now explore your accommodation options</p>
-				<button type="submit" name="button">Browse Accommodation</button>
+				<p class="successNote">You can now explore your accommodation<br>options</p>
+				<button class="submitBtn" type="submit" name="button">Browse Accommodation</button>
 			</div>
 
 		</div> <!-- SECTION1 ENDS -->
