--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			<div class="slide" id="slide4" data-anchor="slide4">
 				<p class="travelCompanionLogo travelCompanionLogo2nd">Travel<br>Companion</p>
 				<h2 class="mainTitle">All Set!</h2>
-				<img src="img/check-symbol.svg" alt="check" class="check">
+				<img src="img/checkSymbol.svg" alt="check" class="check">
 				<p class="successNote">You can now explore your accommodation<br>options</p>
 				<button class="submitBtn" id="submitBtn" type="submit" name="button">Browse Accommodation</button>
 			</div>
@@ -143,7 +143,7 @@
 				<h2 class="mainTitle">Your Results</h2>
 
 				<div class="acomImgWrapper" id="acomImg">
-					<img class=acomImgsrc="" alt="">
+					<img class="acomImg" src="img/grandMillennium.jpg" alt="">
 				</div>
 
 				<div class="wrapper">
