Scroll down after validation is correct is working

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<h2 class="mainTitle">All Set!</h2>
 				<img src="img/checkSymbol.svg" alt="check" class="check">
 				<p class="successNote">You can now explore your accommodation<br>options</p>
-				<button class="viewResultsBtn" id="viewResultsBtn" name="button">Browse Accommodation</button>
+				<button class="viewResultsBtn browseBtn" id="browseBtn" name="button">Browse Accommodation</button>
 			</div>
 		</div>
 
